
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="right"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/user_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_label"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            />

        <EditText
            android:id="@+id/editTextMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />
        
		<TextView
            android:id="@+id/passwd_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:text="@string/password_label"
            />

        <EditText
            android:id="@+id/editTextPasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_label"
                android:onClick="login" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_label" />
        </LinearLayout>

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password" />

    </LinearLayout>